--- a/src/main/resources/templates/Admi.html
+++ b/src/main/resources/templates/Admi.html
@@ -57,8 +57,7 @@
               <ul class="list-inline">
                 <li class="dropdown account"><a href="#" title="My Account" class="  dropdown-toggle" data-toggle="dropdown"> <i class="fa fa-user"></i><span>Mi Cuenta</span> <span class="caret"></span></a>
                   <ul class="dropdown-menu dropdown-menu-right">
-                    <li><a href="register.html">Registrar</a></li>
-                    <li><a href="login.html">Iniciar Sesion</a></li>
+                    <li><a href="login.html">Cerrar Sesion</a></li>
                   </ul>
                 </li>
                 </ul>
@@ -95,7 +94,7 @@
             <li><a href="#" class="active parent">Salones</a>
               <ul>
                 <li><a href="category.html">Horarios</a></li>
-                <li><a href="cart.html">Disponibles</a></li>
+                <li><a href="cart.html">Agendar Salon</a></li>
                 <li><a href="checkout.html">Daños</a></li>
               </ul>
             </li>
@@ -104,13 +103,13 @@
               <ul>
                 <li><a href="category.html">Equipo</a></li>
                 <li><a href="cart.html">Harramientas</a></li>
-                <li><a href="checkout.html">Papeleria</a></li>
               </ul>
             </li>
           <li>  <a href="#" class="active parent">Usuarios</a>
                <ul>
-              <li><a href="cart.html">Modificar</a></li>
-              <li><a href="checkout.html">Borrar</a></li>
+                 <li><a href="cart.html">Mostrar</a></li>
+                 <li><a href="checkout.html">Modificar</a></li>
+                 <li><a href="checkout.html">Borrar</a></li>
               </ul> </li>
           </ul>
         </div>
@@ -122,14 +121,14 @@
   <ul class="breadcrumb">
     <li><a href="index.html"><i class="fa fa-home"></i></a></li>
     <li><a href="#">Mi Cuenta </a></li>
-    <li><a href="login.html">Inicio de Sesion</a></li>
+    <li><a href="login.html">Andimistrador</a></li>
   </ul>
   <div class="row">
     <div class="col-sm-3 hidden-xs column-left" id="column-left">
       <div class="column-block">
         <div class="columnblock-title">Opcciones</div>
         <div class="account-block">
-          <div class="list-group"> <a class="list-group-item" href="login.html">Cerrar sesion</a> <a class="list-group-item" href="register.html">Ayuda</a> <a class="list-group-item" href="forgetpassword.html">Calendario</a> <a class="list-group-item" href="#">Notas</a></div>
+          <div class="list-group">  <a class="list-group-item" href="register.html">Ayuda</a> <a class="list-group-item" href="forgetpassword.html">Calendario</a> <a class="list-group-item" href="#">Notas</a></div>
         </div>
       </div>
     </div>
@@ -138,7 +137,7 @@
         <div class="col-sm-6">
           <div class="well">
             <h2>Registrar</h2>
-            <p><strong>Registrar nuevo administrador</strong></p>
+            <p><strong>Registrar nuevo Ayudante</strong></p>
             <a class="btn btn-primary" href="register.html">Continuar</a></div>
         </div>
 
