--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -110,7 +110,7 @@
     <ul class="breadcrumb">
         <li><a href="index.html"><i class="fa fa-home"></i></a></li>
         <li><a href="#">Mi Cuenta</a></li>
-        <li><a href="register.html">Register</a></li>
+        <li><a href="register.html">Registrar</a></li>
     </ul>
     <div class="row">
         <div class="col-sm-3 hidden-xs column-left" id="column-left">
@@ -205,7 +205,6 @@
                 </fieldset>
                 <div class="buttons">
                     <div class="pull-right"><a class="agree" href="#"><b></b></a>
-
                         &nbsp;
                         <input type="submit" class="btn btn-primary" value="Continue">
                     </div>
