--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -5,13 +5,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="e-commerce site well design with responsive view." />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen" />
-<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-<link href="css/stylesheet.css" rel="stylesheet">
-<link href="css/responsive.css" rel="stylesheet">
-<link href="owl-carousel/owl.carousel.css" type="text/css" rel="stylesheet" media="screen" />
-<link href="owl-carousel/owl.transitions.css" type="text/css" rel="stylesheet" media="screen" />
+<link href="../static/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen" />
+<link href="../stativ/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+<link href="../static/https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+<link href="../static/css/stylesheet.css" rel="stylesheet">
+<link href="../static/css/responsive.css" rel="stylesheet">
+<link href="../static/owl-carousel/owl.carousel.css" type="text/css" rel="stylesheet" media="screen" />
+<link href="../static/owl-carousel/owl.transitions.css" type="text/css" rel="stylesheet" media="screen" />
 <script src="javascript/jquery-2.1.1.min.js" type="text/javascript"></script>
 <script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="javascript/jstree.min.js"></script>
@@ -346,70 +346,16 @@
           <li><a href="#">Wish List</a></li>
         </ul>
       </div>
+
+
       <div class="col-sm-3 footer-block">
-        <h5 class="footer-title">Why Choose</h5>
-        <ul class="list-unstyled ul-wrapper">
-          <li><a href="contact.html">Contact Us</a></li>
-          <li><a href="#">Product Recall</a></li>
-          <li><a href="#">Gift Vouchers</a></li>
-          <li><a href="#">Returns and Exchanges</a></li>
-          <li><a href="#">Shipping Options</a></li>
-          <li><a href="#">Help & FAQs</a></li>
-          <li><a href="#">Sale Only Today</a></li>
-        </ul>
-      </div>
-      <div class="col-sm-3 footer-block">
-        <h5 class="footer-title">My Account</h5>
-        <ul class="list-unstyled ul-wrapper">
-          <li><a href="#">Sign in</a></li>
-          <li><a href="gift.html">Gift Vouchers</a></li>
-          <li><a href="affiliate.html">Affiliates</a></li>
-          <li><a href="#">View Cart</a></li>
-          <li><a href="#">Checkout</a></li>
-          <li><a href="#">Track My Order</a></li>
-          <li><a href="#">Help</a></li>
-        </ul>
-      </div>
-      <div class="col-sm-3 footer-block">
-        <div class="content_footercms_right">
-          <div class="footer-contact">
-            <h5 class="contact-title footer-title">Contact Us</h5>
-            <ul class="ul-wrapper">
-              <li><i class="fa fa-map-marker"></i><span class="location2"> Warehouse & Offices,<br>
-                12345 Street name, California<br>
-                USA</span></li>
-              <li><i class="fa fa-envelope"></i><span class="mail2"><a href="#">info@localhost.com</a></span></li>
-              <li><i class="fa fa-mobile"></i><span class="phone2">+91 0987-654-321<br>+91 0987-654-321</span></li>
-            </ul>
-          </div>
-        </div>
+
       </div>
     </div>
     <div class="row">
       <div class="footer-top-cms">
-        <div class="col-sm-7">
-          <div class="newslatter">
-            <form>
-              <h5>Sign up for our Newsletter</h5>
-              <div class="input-group">
-                <input type="text" class=" form-control" placeholder="Your-email@website.com">
-                <button type="submit" value="Sign up" class="btn btn-large btn-primary">Subscribe</button>
-              </div>
-            </form>
-          </div>
-        </div>
-        <div class="col-sm-5">
-          <div class="footer-social">
-            <h5>Social</h5>
-            <ul>
-              <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-              <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li class="gplus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-              <li class="youtube"><a href="#"><i class="fa fa-youtube-play"></i></a></li>
-            </ul>
-          </div>
-        </div>
+
+        
       </div>
     </div>    
   </div>
