--- a/src/main/resources/templates/affiliate.html
+++ b/src/main/resources/templates/affiliate.html
@@ -5,15 +5,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="e-commerce site well design with responsive view." />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen" />
-<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-<link href="css/stylesheet.css" rel="stylesheet">
-<link href="css/responsive.css" rel="stylesheet">
-<link href="owl-carousel/owl.carousel.css" type="text/css" rel="stylesheet" media="screen" />
-<link href="owl-carousel/owl.transitions.css" type="text/css" rel="stylesheet" media="screen" />
+
+<link href="../static/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen" />
+<link href="../static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+<link href="../static/https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+<link href="../static/css/stylesheet.css" rel="stylesheet">
+<link href="../static/css/responsive.css" rel="stylesheet">
+<link href="../static/owl-carousel/owl.carousel.css" type="text/css" rel="stylesheet" media="screen" />
+<link href="../static/owl-carousel/owl.transitions.css" type="text/css" rel="stylesheet" media="screen" />
 <script src="javascript/jquery-2.1.1.min.js" type="text/javascript"></script>
-<script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="../static/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="javascript/jstree.min.js"></script>
 <script type="text/javascript" src="javascript/template.js"></script>
 <script src="javascript/common.js" type="text/javascript"></script>
