--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -113,7 +113,7 @@
 
         <form class="form-horizontal" enctype="multipart/form-data" method="post" action="">
           <fieldset id="account">
-            <legend>Busqueda de Usuario</legend>
+            <legend>Resgistar Prestamo</legend>
             <div class="form-group required">
               <label for="id" class="col-sm-2 control-label">ID Usuario</label>
               <div class="col-sm-10">
