--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -82,7 +82,7 @@
     </div>
     <nav id="menu" class="navbar">
       <div class="nav-inner">
-        <div class="navbar-header"><span id="category" class="visible-xs">Presmos</span>
+        <div class="navbar-header"><span id="category" class="visible-xs">Prestamos</span>
           <button type="button" class="btn btn-navbar navbar-toggle" ><i class="fa fa-bars"></i></button>
         </div>
 
@@ -113,7 +113,7 @@
 
         <form class="form-horizontal" enctype="multipart/form-data" method="post" action="">
           <fieldset id="account">
-            <legend>Resgistar Prestamo</legend>
+            <legend>Registrar Prestamo</legend>
             <div class="form-group required">
               <label for="id" class="col-sm-2 control-label">ID Usuario</label>
               <div class="col-sm-10">
